# snap

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  lint.bat  lint.sh
fuzzing/: CMakeLists.txt  TODO.txt  bit_byteswap_fuzzer.cpp
include/snap/: CMakeLists.txt  concepts.hpp  fixed_string.hpp  inplace_vector.hpp  numbers.hpp  span.hpp  version.hpp
include/snap/bit/: CMakeLists.txt  bit_cast.hpp  bit_ceil.hpp  bit_floor.hpp  bit_width.hpp  byteswap.hpp  countl.hpp  countr.hpp  endian.hpp  has_single_bit.hpp  popcount.hpp  rotl.hpp  rotr.hpp
include/snap/concepts/: CMakeLists.txt  boolean_testable.hpp  container_compatible_range.hpp  hashable.hpp  integer.hpp  istream_extractable.hpp  operators.hpp  ostream_insertable.hpp  pair_like.hpp  ranges.hpp  tuple_like.hpp  variant_like.hpp
include/snap/debugging/: CMakeLists.txt  breakpoint.hpp  breakpoint_if_debugging.hpp  is_debugger_present.hpp
include/snap/expected/: CMakeLists.txt  unexpected.hpp
include/snap/functional/: CMakeLists.txt  bind_back.hpp  bind_front.hpp  identity.hpp  invoke_r.hpp  is_reference_wrapper.hpp
include/snap/internal/: CMakeLists.txt  abi_namespace.hpp
include/snap/internal/builtin/: CMakeLists.txt  bit_cast.hpp
include/snap/internal/compat/: CMakeLists.txt  constexpr.hpp  explicit.hpp  features.hpp  std.hpp  version.hpp
include/snap/internal/config/: abi_namespace.hpp.in
include/snap/iterator/: CMakeLists.txt  const_iterator.hpp  default_sentinel.hpp  is_contiguous_iterator.hpp
include/snap/memory/: CMakeLists.txt  construct_at.hpp  inout_ptr.hpp  inplace_storage.hpp  observer_ptr.hpp  out_ptr.hpp  ptr_traits.hpp  raw_ptr.hpp  retain_ptr.hpp  temp_value.hpp  to_address.hpp
include/snap/meta/: CMakeLists.txt  always_false.hpp  detector.hpp  has.hpp  has_traits.hpp  placeholder.hpp  type_list.hpp
include/snap/numeric/: CMakeLists.txt  midpoint.hpp
include/snap/simd/: simd.hpp
include/snap/stop_token/: CMakeLists.txt  atomic_unique_lock.hpp  intrusive_list_view.hpp  intrusive_shared_ptr.hpp  stop_source.hpp  stop_state.hpp
include/snap/thread/: CMakeLists.txt  jthread.hpp
include/snap/type_traits/: CMakeLists.txt  common_reference.hpp  dependent_type.hpp  is_assignable_from.hpp  is_boolean_testable.hpp  is_bounded_array.hpp  is_brace_constructible.hpp  is_char.hpp  is_constant_evaluated.hpp  is_constexpr_friendly.hpp  is_copyable.hpp  is_derived_from.hpp  is_destructible.hpp  is_equality_comparable.hpp  is_equivalence_relation.hpp  is_implicit_lifetime.hpp  is_integer.hpp  is_movable.hpp  is_neither.hpp  is_predicate.hpp  is_regular.hpp  is_relation.hpp  is_semiregular.hpp  is_signed_integral.hpp  is_specialization.hpp  is_specialization_of.hpp  is_strict_weak_order.hpp  is_totally_ordered.hpp  is_unbounded_array.hpp  is_unsigned_integral.hpp  pointer_of.hpp  reference_converts_from_temporary.hpp  remove_cvref.hpp  type_identity.hpp  unwrap_reference.hpp
include/snap/utility/: CMakeLists.txt  cmp.hpp  forward_like.hpp  function_ref.hpp  in_range.hpp  nontype.hpp  to_underlying.hpp  unreachable.hpp
tests/: CMakeLists.txt
tests/compile_fail/bit/: bad_bit_cast_non_trivial.cpp  bad_bit_cast_size_mismatch.cpp  bad_bit_ceil_floating.cpp  bad_bit_ceil_overflow_constexpr.cpp  bad_bit_ceil_signed.cpp
tests/integration/: CMakeLists.txt  test_control_loop.cpp
tests/support/: test_main.cpp
tests/unit/: test_fixed_string.cpp
tests/unit/bit/: test_bit_cast.cpp  test_bit_ceil.cpp  test_bit_floor.cpp  test_bit_width.cpp  test_byteswap.cpp  test_countl_countr.cpp  test_endian.cpp  test_has_single_bit.cpp  test_popcount.cpp  test_rotl_rotr.cpp
tests/unit/concepts/: test_ranges.cpp
tests/unit/debugging/: test_debugger.cpp
tests/unit/expected/: test_unexpected.cpp
tests/unit/fixed_string/: test_runtime.cpp
tests/unit/functional/: test_bind.cpp  test_identity.cpp
tests/unit/inplace_vector/: test_basic.cpp
tests/unit/internal/: CMakeLists.txt  test_bit_log2.cpp
tests/unit/iterator/: const_iterator.hpp  default_sentinel.hpp  is_contiguous_iterator.hpp  test_const_iterator.cpp  test_default_sentinel.cpp  test_is_contiguous.cpp
tests/unit/memory/: construct_at.hpp  inout_ptr.hpp  inplace_storage.hpp  observer_ptr.hpp  out_ptr.hpp  ptr_traits.hpp  raw_ptr.hpp  retain_ptr.hpp  temp_value.hpp  test_construct_destroy.cpp  test_observer_ptr.cpp  test_out_inout_ptr.cpp  test_retain_ptr.cpp  test_temp_value.cpp  test_to_address.cpp  to_address.hpp
tests/unit/meta/: CMakeLists.txt  detector.hpp  has.hpp  test_detector.cpp  test_has.cpp  test_has_traits.cpp  test_meta.cpp  test_type_list.cpp
tests/unit/numbers/: test_constants.cpp
tests/unit/numeric/: midpoint.hpp  test_midpoint.cpp
tests/unit/simd/: CMakeLists.txt  simd.hpp  test_bit.cpp
tests/unit/smoke/: test_core.cpp
tests/unit/span/: test_span.cpp
tests/unit/stop_token/: atomic_unique_lock.hpp  intrusive_list_view.hpp  intrusive_shared_ptr.hpp  stop_source.hpp  stop_state.hpp  test_atomic_unique_lock.cpp  test_stop_token.cpp
tests/unit/thread/: jthread.hpp  test_jthread.cpp
tests/unit/type_traits/: CMakeLists.txt  common_reference.hpp  dependent_type.hpp  is_assignable_from.hpp  is_boolean_testable.hpp  is_bounded_array.hpp  is_brace_constructible.hpp  is_char.hpp  is_constant_evaluated.hpp  is_copyable.hpp  is_derived_from.hpp  is_destructible.hpp  is_equality_comparable.hpp  is_equivalence_relation.hpp  is_implicit_lifetime.hpp  is_integer.hpp  is_movable.hpp  is_neither.hpp  is_predicate.hpp  is_regular.hpp  is_relation.hpp  is_semiregular.hpp  is_signed_integral.hpp  is_specialization_of.hpp  is_strict_weak_order.hpp  is_totally_ordered.hpp  is_unbounded_array.hpp  is_unsigned_integral.hpp  pointer_of.hpp  remove_cvref.hpp  test_remove_cvref.cpp  type_identity.hpp  unwrap_reference.hpp
tests/unit/utility/: cmp.hpp  forward_like.hpp  function_ref.hpp  in_range.hpp  nontype.hpp  test_cmp_forward_like.cpp  test_function_ref.cpp  test_in_range.cpp  test_to_underlying.cpp  to_underlying.hpp  unreachable.hpp
(+60 files in other folders)
